--- a/src/GeekStream.Web/Views/Categories/Index.cshtml
+++ b/src/GeekStream.Web/Views/Categories/Index.cshtml
@@ -36,7 +36,7 @@
                         @item.Category
                     </a>
                         <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
-                        <a asp-controller="Users" asp-action="UserProfile" asp-route-name="@item.Author">@Html.DisplayFor(modelItem => item.Author)</a>
+                        <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.AuthorId">@Html.DisplayFor(modelItem => item.Author)</a>
                     </div>
                     <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
                         <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
