--- a/src/GeekStream.Web/Views/Home/Index.cshtml
+++ b/src/GeekStream.Web/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
               <div class="card-navbar">
                   <a name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@item.CategoryId">@item.Category</a>
                   <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
-                  <a asp-controller="Users" asp-action="UserProfile" asp-route-name="@item.Author">@Html.DisplayFor(modelItem => item.Author)</a>
+                  <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.AuthorId">@Html.DisplayFor(modelItem => item.Author)</a>
               </div>
               <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
                   <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
