--- a/src/GeekStream.Web/Views/Articles/Index.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Index.cshtml
@@ -16,9 +16,7 @@
                         <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.AuthorId">@Html.DisplayFor(modelItem => item.Author)</a>
                     </div>
                     <h3> @Html.DisplayFor(modelItem => item.Title)</h3>
-                    @*
-                    <img src="@Url.Content(item.Images.First().ImgPath)"/>
-                    *@
+                    <img src="/images/@Url.Content(item.Image)"/>
                     <p>@Html.DisplayFor(modelItem => item.Content)</p>
                     <div class="text-right mb-0">
                         <p>@Html.DisplayFor(modelItem => item.Rating)</p>
