--- a/src/GeekStream.Web/Views/Articles/Create.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-<form asp-action="Create" enctype="multipart/form-data">
+<form asp-action="Create" enctype="multipart/form-data" method="post">
 
 <div class="navbar">
     <h5>Новая статья</h5>
@@ -37,10 +37,8 @@
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="col-md-10">
-                    <label  asp-for="FilePaths"class="control-label"></label>
-                    <input type="file" id="files" name="files" multiple=""/>
-                </div>
+                    <label  asp-for="FilePaths"></label>
+                    <input type="file" name="files" multiple=""/>
             </div>
     </form>
 
