--- a/src/GeekStream.Web/Views/Articles/Details.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Details.cshtml
@@ -14,8 +14,11 @@
                 <p>@Html.DisplayFor(modelItem => Model.PublishedDate)</p>
                 <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@Model.AuthorId">@Html.DisplayFor(modelItem => Model.Author)</a>
             </div>
-                <h3 class="card-title"> @Html.DisplayFor(modelItem => Model.Title)</h3>
-                    <img src="/images/@Url.Content(Model.Image)"/>
+          <h3 class="card-title"> @Html.DisplayFor(modelItem => Model.Title)</h3>
+          @foreach (var image in Model.Images)
+          {
+            <img src="/images/@image.FileName"/>
+          }
                 <p>@Html.DisplayFor(modelItem => Model.Content)</p>
             <div class="text-right mb-0">
                 <p>@Html.DisplayFor(modelItem => Model.Rating)</p>
