--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
         <div class="row">
             <div class="col-md-3">
                 <h5 class="mb-2">Подписки</h5>
-                <div class="btn btn-outline-light">Все подряд</div>
+                <button type="button" class="btn btn-light" data-toggle="button" aria-pressed="true" autocomplete="off"asp-controller="Home" asp-action="Index">Все подряд</button>
+                <button type="button" class="btn btn-light" data-toggle="button" aria-pressed="false" autocomplete="off" asp-controller="Home" asp-action="Index" asp-route-id="1">IT</button>
+                <button type="button" class="btn btn-light" data-toggle="button" aria-pressed="false" autocomplete="off">Физика</button>
                 @await RenderSectionAsync("subscriptions", required: false)
             </div>
             <div class="col">
