--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -1,4 +1,5 @@
-﻿@model GeekStream.Core.ViewModels.UserViewModel
+﻿@using GeekStream.Core.Entities
+@model GeekStream.Core.ViewModels.UserViewModel
 
 @{
     ViewData["Title"] = Model.UserName;
@@ -16,7 +17,7 @@
                     {
                         <form asp-controller="Home" asp-action="Unsubscribe">
                             <input type="hidden" asp-for="@Model.Id"/>
-                            <input asp-for="Id" class="btn btn-outline-primary" type="submit" value="✓ Вы подписаны" script="window.location.reload()"/>
+                            <input class="btn btn-outline-primary" type="submit" value="✓ Вы подписаны"/>
                         </form>
                     }
                     else
@@ -37,6 +38,7 @@
 <h3 mb-2>Статьи от данного автора</h3>
 @foreach (var item in Model.Articles)
 {
+    var id = item.Id;
     <div class="card mb-2">
         <div class="card-body">
             <div class="card-navbar">
@@ -51,7 +53,17 @@
             </a>
             <p>@Html.DisplayFor(modelItem => item.Content)</p>
             <div class="text-right mb-0">
-                <p>@Html.DisplayFor(modelItem => item.Rating)</p>
+            <form asp-controller="Vote" asp-action="ProcessVotes">
+                <input type="hidden" asp-for="@id"/>
+                <input type="hidden" name="type" value="@VoteType.UpVote"/>
+                <input type="submit" class="btn btn-success"/>
+            </form>
+            <p>@Html.DisplayFor(modelItem => item.Rating)</p>
+                <form asp-controller="Vote" asp-action="ProcessVotes">
+                    <input type="hidden" asp-for="@id"/>
+                    <input type="hidden" name="type" value="@VoteType.DownVote"/>
+                    <input type="submit" class="btn btn-danger"/>
+                </form>
             </div>
         </div>
     </div>
