--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -10,19 +10,20 @@
     <div class="card-body">
         <div class="card-navbar justify-content-between">
             <h3 class="card-title">@Model.UserName</h3>
+            <p>RATING: @Model.Rating</p>
             <div>
                 @if (Model.UserMail != User.Identity.Name)
                 {
                     @if (Model.IsSubscribed)
                     {
-                        <form asp-controller="Home" asp-action="Unsubscribe">
+                        <form asp-controller="Users" asp-action="Unsubscribe">
                             <input type="hidden" asp-for="@Model.Id"/>
                             <input class="btn btn-outline-primary" type="submit" value="✓ Вы подписаны"/>
                         </form>
                     }
                     else
                     {
-                        <form asp-controller="Home" asp-action="Subscribe">
+                        <form asp-controller="Users" asp-action="Subscribe">
                             <input type="hidden" asp-for="@Model.Id"/>
                             <input class="btn btn-primary" type="submit"value="Подписаться"/>
                         </form>
@@ -38,7 +39,7 @@
 <h3 mb-2>Статьи от данного автора</h3>
 @foreach (var item in Model.Articles)
 {
-    var id = item.Id;
+    var articleId = item.Id;
     <div class="card mb-2">
         <div class="card-body">
             <div class="card-navbar">
@@ -54,13 +55,13 @@
             <p>@Html.DisplayFor(modelItem => item.Content)</p>
             <div class="text-right mb-0">
             <form asp-controller="Vote" asp-action="ProcessVotes">
-                <input type="hidden" asp-for="@id"/>
+                <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.UpVote"/>
                 <input type="submit" class="btn btn-success"/>
             </form>
             <p>@Html.DisplayFor(modelItem => item.Rating)</p>
                 <form asp-controller="Vote" asp-action="ProcessVotes">
-                    <input type="hidden" asp-for="@id"/>
+                    <input type="hidden" asp-for="@articleId"/>
                     <input type="hidden" name="type" value="@VoteType.DownVote"/>
                     <input type="submit" class="btn btn-danger"/>
                 </form>
