--- a/src/GeekStream.Web/Views/Articles/Delete.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.Entities.Article
+﻿@model GeekStream.Core.ViewModels.ArticleViewModel;
 
 @{
     ViewData["Title"] = "Delete";
@@ -24,16 +24,10 @@
             @Html.DisplayFor(model => model.Content)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostedOn)
+            @Html.DisplayNameFor(model => model.PublishedDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostedOn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author.Email)
+            @Html.DisplayFor(model => model.PublishedDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rating)
