--- a/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_ArticleCard.cshtml
@@ -1,6 +1,7 @@
 ﻿@using GeekStream.Core.Entities
 @model GeekStream.Core.ViewModels.ArticleViewModel;
-
+@{
+    var articleId = @Model.Id;
 <div class="card mb-2">
     <div class="card-body rounded-lg">
         <div class="card-navbar justify-content-between">
@@ -22,16 +23,17 @@
         <p>@Html.DisplayFor(modelItem => Model.Content)</p>
         <div class="text-right mb-0">
             <form asp-controller="Vote" asp-action="ProcessVotes">
-                <input type="hidden" asp-for="@Model.Id"/>
+                <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.UpVote"/>
                 <input type="submit" class="btn btn-success"/>
             </form>
             <p>@Html.DisplayFor(modelItem => Model.Rating)</p>
             <form asp-controller="Vote" asp-action="ProcessVotes">
-                <input type="hidden" asp-for="@Model.Id"/>
+                <input type="hidden" asp-for="@articleId"/>
                 <input type="hidden" name="type" value="@VoteType.DownVote"/>
                 <input type="submit" class="btn btn-danger"/>
             </form>
         </div>
     </div>
 </div>
+}
