--- a/src/GeekStream.Web/Views/Shared/_Navbar.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,8 @@
-﻿        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+﻿@using GeekStream.Core.Entities
+@using GeekStream.Core.Services
+@inject UserService userService;
+
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container h-100">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="/images/NavBarLogo.png" width="50" height="43" alt="">
@@ -36,9 +40,19 @@
 
                         if (User.Identity.IsAuthenticated)
                         {
-                            <form class="form-inline" asp-controller="Account" asp-action="Logout" method="post">
-                                <button type="submit" class="nav-link btn btn-link text-dark">Logout @User.Identity.Name</button>
-                            </form>
+                            var user = userService.GetCurrentUser();
+                            <div class="dropdown">
+                                <div class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    @user.FirstName @user.LastName
+                                </div>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" asp-controller="Users" asp-action="UserProfile" asp-route-id="@user.Id">Профиль</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <form class="dropdown-item" asp-controller="Account" asp-action="Logout" method="post">
+                                        <button type="submit" class="nav-link btn btn-link text-dark">Logout @user.FirstName</button>
+                                    </form>
+                                </div>
+                            </div>
                         }
                         else
                         {
@@ -46,7 +60,6 @@
                             <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
                         }
                     }
-
                 </div>
             </div>
         </nav>
