Add rating to comments

--- a/src/GeekStream.Web/Views/Articles/Edit.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.ArticleCreationViewModel;
+﻿@model GeekStream.Core.ViewModels.ArticleEditViewModel;
 
 @{
     ViewData["Title"] = "Edit";
