--- a/src/GeekStream.Web/Views/Shared/_Layout.cshtml
+++ b/src/GeekStream.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - GeekStream</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/lib/upvotejs/upvotejs.css">
+    <script type="text/javascript" src="~/lib/upvotejs/upvotejs.vanilla.js"></script>
+    <script type="text/javascript" src="~/lib/upvotejs/upvotejs.jquery.js"></script>
 </head>
 <body>
     <header>
