--- a/src/GeekStream.Web/Views/Articles/Create.cshtml
+++ b/src/GeekStream.Web/Views/Articles/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeekStream.Core.ViewModels.ArticleCreationViewModel
+﻿@model GeekStream.Core.ViewModels.ArticleEditViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -36,9 +36,9 @@
                 <textarea asp-for="Content" class="form-control text-muted" rows="10"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                    <label  asp-for="FilePaths"></label>
-                    <input type="file" name="files" multiple=""/>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="customFile" name="files">
+                <label class="custom-file-label" for="customFile">Choose file</label>
             </div>
     </form>
 
