--- a/src/GeekStream.Web/Views/Admin/EditCategory.cshtml
+++ b/src/GeekStream.Web/Views/Admin/EditCategory.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit Category";
 }
 
-    <form method="post" class="mt-3">
+    <form method="post" class="mt-3" asp-action="EditCategory">
     <div class="form-group row">
         <label asp-for="Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -28,6 +28,11 @@
 
     <div asp-validation-summary="All" class="text-danger"></div>
 
+    <div class="custom-file">
+         <input type="file" class="custom-file-input" id="customFile" name="file">
+         <label class="custom-file-label" for="customFile">Choose file</label>
+            <span asp-validation-for="Image" class="text-danger"></span>
+    </div>
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Update</button>
