--- a/src/GeekStream.Web/Views/Users/UserProfile.cshtml
+++ b/src/GeekStream.Web/Views/Users/UserProfile.cshtml
@@ -8,7 +8,8 @@
 
 <div class="card mb-2">
     <div class="card-body">
-        <div class="card-navbar justify-content-between">
+        <div class="card-navbar justify-content-between align-items-center">
+            <img class="user__icon" width="80" src="/images/@Model.UserIcon.FileName"/>
             <h3 class="card-title">@Model.UserName</h3>
             <p>RATING: @Model.Rating</p>
             <div>
@@ -43,12 +44,20 @@
     <div class="card mb-2">
         <div class="card-body">
             <div class="card-navbar">
-                <a name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@item.CategoryId">
-                    @item.Category
-                </a>
-                <p>@Html.DisplayFor(modelItem => item.PublishedDate)</p>
-                <a asp-controller="Users" asp-action="UserProfile" asp-route-name="@item.Id">@Html.DisplayFor(modelItem => item.Author)</a>
-            </div>
+                                <div class="navbar-right">
+                    <a name="category" asp-controller="Categories" asp-action="Index" asp-route-category="@item.CategoryId">
+                    <img class="category__icon" width="20" src="/images/@item.CategoryIcon.FileName"/>
+                        @item.Category
+                    </a>
+                    @Html.DisplayFor(modelItem => item.PublishedDate)
+                </div>
+                <div class="navbar-left">
+                    <a asp-controller="Users" asp-action="UserProfile" asp-route-id="@item.AuthorId">
+                        <img class="user__icon" width="20" src="/images/@item.UserIcon.FileName"/>
+                        @Html.DisplayFor(modelItem => item.Author)
+                    </a>
+                </div>
+                </div>
             <a asp-controller="Articles" asp-action="Details" asp-route-id="@item.Id">
                 <h3 class="card-title"> @Html.DisplayFor(modelItem => item.Title)</h3>
             </a>
